--- a/package.json
+++ b/package.json
@@ -1,31 +1,19 @@
 {
   "name": "react-hooks-state-arrays",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "^5.0.1"
-  },
+  "version": "1.0.0",
+  "description": "## Learning Goals",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/henry-thiongi/react-hooks-state-arrays.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-} .
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/henry-thiongi/react-hooks-state-arrays/issues"
+  },
+  "homepage": "https://github.com/henry-thiongi/react-hooks-state-arrays#readme"
+}
